--- a/Assignment_3/Dockerfile_HT.txt
+++ b/Assignment_3/Dockerfile_HT.txt
@@ -4,24 +4,25 @@ FROM pytorch/pytorch:1.7.0-cuda11.0-cudnn8-runtime
 # Maintainer info
 LABEL maintainer="hardik.thakkar00@gmail.com"
 
-# Make working directories
-RUN  mkdir -p /home/project-api
-WORKDIR /home/project-api/
-
 # Upgrade pip with no cache
 RUN pip install --no-cache-dir -U pip
+
 RUN pip install pipenv
+
 RUN pip install fastapi[all]
+
+# Copy every file in the source folder to the created working directory ----  replace this with git clone
+COPY  . .
 
 # Copy application requirements file to the created working directory
 COPY requirements.txt .
 
 # Install application dependencies from the requirements file
-#RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
+
 RUN pipenv install --dev
-# Copy every file in the source folder to the created working directory ----  replace this with git clone
-COPY  . .
-RUN pipenv install --dev
+
 RUN pipenv shell
+
 # Run the python application
-#CMD ["python", "sentiment_analyzer/api.py"]
+CMD uvicorn sentiment_analyzer.api:app --reload
